# panli

./: README.md  pyproject.toml
conf/base/: catalog.yml
notebooks/: data_overview.ipynb
src/panli/: __init__.py  __main__.py  settings.py
