[tool.poetry]
name = "panli"
version = "0.1.0"
description = ""
authors = ["Chantal van Son <c.m.van.son@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pandas = "^2.1.4"
kedro = "^0.19.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.kedro]
package_name = "panli"
project_name = "panli"
kedro_init_version = "0.19.1"
source_dir = "src"

[project.entry-points."kedro.hooks"]
